# api/swagger/swagger.json
@@ -1,14 +1,23 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "Service Selector"
+    "title": "Shopping cart API"
   },
   "basePath": "/",
   "schemes": [
     "http",
     "https"
   ],
+  "components": {
+    "securitySchemes": {
+      "Bearer": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
   "definitions": {
     "loginRequest": {
       "type": "object",
@@ -107,9 +116,6 @@
     "cartRequestUpdate": {
       "type": "object",
       "properties": {
-        "status": {
-          "type": "string"
-        },
         "cart_items": {
           "type": "array",
           "items": {
@@ -129,6 +135,14 @@
           "type": "integer"
         },
         "quantity": {
+          "type": "integer"
+        }
+      }
+    },
+    "checkoutRequest": {
+      "type": "object",
+      "properties": {
+        "cart_id": {
           "type": "integer"
         }
       }
@@ -158,16 +172,16 @@
           "Authentication"
         ],
         "summary": "User's login. Generates an access token",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/loginRequest"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/loginRequest"
+              }
             }
           }
-        ],
+        },
         "consumes": [
           "application/json"
         ],
@@ -208,16 +222,16 @@
           "User"
         ],
         "summary": "Create user",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/userRequest"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/userRequest"
+              }
             }
           }
-        ],
+        },
         "consumes": [
           "application/json"
         ],
@@ -252,16 +266,16 @@
           "Cart"
         ],
         "summary": "Create cart",
-        "parameters": [
-          {
-            "name": "cart",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/cartRequest"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/cartRequest"
+              }
             }
           }
-        ],
+        },
         "consumes": [
           "application/json"
         ],
@@ -342,16 +356,18 @@
             "in": "path",
             "required": true,
             "type": "number"
-          },
-          {
-            "name": "cart_items",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/cartRequestUpdate"
-            }
           }
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/cartRequestUpdate"
+              }
+            }
+          }
+        },
         "consumes": [
           "application/json"
         ],
@@ -398,6 +414,67 @@
         "responses": {
           "204": {
             "description": "Cart deleted"
+          },
+          "404": {
+            "description": "Not found",
+            "schema": {
+              "$ref": "#/definitions/error_response"
+            }
+          },
+          "500": {
+            "description": "Internal error",
+            "schema": {
+              "$ref": "#/definitions/error_response"
+            }
+          }
+        }
+      }
+    },
+    "/checkout": {
+      "post": {
+        "tags": [
+          "Checkout"
+        ],
+        "summary": "Process an existing cart and generates an order",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/checkoutRequest"
+              }
+            }
+          }
+        },
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "201": {
+            "description": "Order created",
+            "schema": {
+              "$ref": "#/definitions/error_response"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/error_response"
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "$ref": "#/definitions/error_response"
+            }
           },
           "404": {
             "description": "Not found",
