# index.js
@@ -9,7 +9,7 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./api/swagger/swagger.json');
 const logger = require('./api/utils/loggerFactory').createLogger(__filename);
 const db = require('./api/db/models');
-const { usersRouter, cartsRouter, authenticationRouter } = require('./api/routers');
+const { usersRouter, cartsRouter, authenticationRouter, checkoutRouter } = require('./api/routers');
 const PORT = process.env.PORT || 9000;
 
 
@@ -30,20 +30,16 @@ function initializeExpress() {
   app.use('/authentication', authenticationRouter);
   app.use('/users', usersRouter);
   app.use('/carts', cartsRouter);
+  app.use('/checkout', checkoutRouter);
 }
 
 async function initializeModels() {
   try {
+
     await db.User.sync();
+    await db.Order.sync();
     await db.Cart.sync();
     await db.CartItem.sync();
-
-    // const user = await db.User.findOne({ where: { name: 'Barbi' } });
-    // const buyer = await db.User.create({name: 'Barbi', lastName: 'Blasco', userName: 'barblas'});
-    // const cart = await db.Cart.create({status: 'open'});
-    // cart.setBuyer(buyer);
-    // const cart = await Cart.findOne({where: { user: user}});
-    // console.log(await user.getCarts());
 
   } catch(err) {
     logger.error(`[message: error initializing models] [error: ${err}]`);
